# gen-peru-poblacion

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/fuentes/: consumidores_distribucion_2023.json  financiero_distribucion_2023.json  mype_distribucion_2023.json  salud_distribucion_2023.json
docs/: CHECKLIST.md  PROMPT_CLAUDE_CODE.md  SPEC.md  context.md  plan.md  tasks.md
examples/: basico.py  con_agente.py
src/gen_peru_poblacion/: __init__.py  agent_builder.py  calibrator.py  cli.py  config.py  exporters.py  generator.py  providers.py  verify.py
tests/: test_agents.py  test_generator.py
